翻译  人们似乎忘记了他们所读的大部分内容，而且他们大多没有注意到这一点

--- a/ToolsForThought/传统的间隔重复记忆卡片是原子化的.md
+++ b/ToolsForThought/传统的间隔重复记忆卡片是原子化的.md
@@ -8,4 +8,4 @@
 
 但是在其他领域——比如物理学或数学——原子知识只有作为整体结构的一部分才有意义。当这些领域的卡片效果很好时，我怀疑这是因为它们与复习者头脑中一些无形的、更广泛的结构建立了联系。
 
-这种原子化是[单独的间隔重复记忆卡片是一种糟糕的交流媒介](https://notes.andymatuschak.org/z1YhDPWyvzzkC79LFcF4DSTanKpEGpic8bAe)的主要原因。这也限制了它们对长期个人笔记的适用性：[现有的间隔重复系统阻碍常青笔记](https://notes.andymatuschak.org/zZuqUv3XNEFsimMmHszLF87Pr5vTraLjL5Y)。
+这种原子化是《[单独的间隔重复记忆卡片是一种糟糕的交流媒介](https://notes.andymatuschak.org/z1YhDPWyvzzkC79LFcF4DSTanKpEGpic8bAe)》的主要原因。这也限制了它们对长期个人笔记的适用性：《[现有的间隔重复系统阻碍常青笔记](https://notes.andymatuschak.org/zZuqUv3XNEFsimMmHszLF87Pr5vTraLjL5Y)》。
