--- a/ToolsForThought/助记文章可以提供对其内容的详细记忆，以换取 35-50% 的阅读时间开销.md
+++ b/ToolsForThought/助记文章可以提供对其内容的详细记忆，以换取 35-50% 的阅读时间开销.md
@@ -2,19 +2,19 @@
 
 To reach an average of 2 months of demonstrated retention, 2019H1 [QCVC](https://notes.andymatuschak.org/zDEm83cN4nymHeX89cvZCPVQJ4hyhmsLexyC) readers spent an average of 90 minutes reviewing. Because it takes the average reader about 4 hours to read the essay, we can frame the review time as a relative overhead: by spending 35-50% more time with the essay, readers will reliably retain all its details.
 
-为了达到平均 2 个月的实证记忆率，2019H1[QCVC](https://notes.andymatuschak.org/zDEm83cN4nymHeX89cvZCPVQJ4hyhmsLexyC) 读者平均花了 90 分钟复习。因为一般读者需要花 4 个小时左右的时间来阅读文章，我们可以把复习时间看作是一种相对开销：只要多花 35-50% 的时间来阅读文章，读者就能可靠地记忆文章的所有细节。
+为了达到平均 2 个月的实证记忆保留率，2019 上半年「[量子国度](https://notes.andymatuschak.org/zDEm83cN4nymHeX89cvZCPVQJ4hyhmsLexyC)」读者平均花了 90 分钟复习。因为一般读者需要花 4 个小时左右的时间来阅读文章，我们可以把复习时间看作是一种相对开销：只要多花 35-50% 的时间来阅读文章，读者就能可靠地记忆文章的所有细节。
 
 It’s like an add-on. Would you like avocado with your burger for $2 extra? It seems that detailed retention works like that, at least for QCVC. What if you could “purchase that add-on” for anything you read? Or if you could spend 10% more time to retain the subset of details you found most valuable?
 
-这就像一个配料。你想在汉堡里加牛油果吗，多花两美元？看起来详细的记忆是这样的，至少对 QCVC 来说是这样的。如果你可以为你所读的任何东西「购买配料」呢？或者如果你能多花 10% 的时间来记忆你认为最有价值的细节子集呢？
+这就像一个配料。你想在汉堡里加牛油果吗，多花两美元？看起来详细的记忆是这样的，至少对「量子国度」来说是这样的。如果你可以为你所读的任何东西「购买配料」呢？或者如果你能多花 10% 的时间来记忆你认为最有价值的细节子集呢？
 
 The inevitability associated with this proposition is what makes the mnemonic medium a possible [Executable strategy](https://notes.andymatuschak.org/z53fk5XwrsnueNDDCq6WNe2VbPhrDGQmmVgNS) for solving [People seem to forget most of what they read, and they mostly don’t notice](https://notes.andymatuschak.org/z3d6dFhTA5zTmykZ3zh4Y2vCw3aVbUxRiQQcc).
 
-与这个命题相关的必然性是使记忆媒介成为解决[人们似乎忘记了他们所读的大部分内容，而且他们大多没有注意到](https://notes.andymatuschak.org/z3d6dFhTA5zTmykZ3zh4Y2vCw3aVbUxRiQQcc)的可靠[可执行战略](https://notes.andymatuschak.org/z53fk5XwrsnueNDDCq6WNe2VbPhrDGQmmVgNS)。
+与这个命题相关的必然性是使助记媒介成为解决[人们似乎忘记了他们所读的大部分内容，而且他们大多没有注意到](https://notes.andymatuschak.org/z3d6dFhTA5zTmykZ3zh4Y2vCw3aVbUxRiQQcc)的可靠[可执行战略](https://notes.andymatuschak.org/z53fk5XwrsnueNDDCq6WNe2VbPhrDGQmmVgNS)。
 
 Just how small can we make that overhead? Looking at 2019H1 vs. 2019H2 [QCVC](https://notes.andymatuschak.org/zDEm83cN4nymHeX89cvZCPVQJ4hyhmsLexyC) readers (the latter having a more aggressive schedule), it appears that we may have already reduced the cost by 25%.
 
-只是我们能把这个开销变得多小？看看 2019H1 年与 2019H2 年的 [QCVC](https://notes.andymatuschak.org/zDEm83cN4nymHeX89cvZCPVQJ4hyhmsLexyC) 读者（后者有一个更积极的时间表），似乎我们可能已经减少了25%的成本。
+只是我们能把这个开销变得多小？看看 2019 上半年与 2019 下半年的「[量子国度](https://notes.andymatuschak.org/zDEm83cN4nymHeX89cvZCPVQJ4hyhmsLexyC)」读者（后者有一个更激进的时间表），似乎我们可能已经减少了 25% 的成本。
 
 ------
 
