--- a/ToolsForThought/单独的间隔重复记忆卡片是一种糟糕的交流媒介.md
+++ b/ToolsForThought/单独的间隔重复记忆卡片是一种糟糕的交流媒介.md
@@ -2,9 +2,9 @@
 
 原文：https://notes.andymatuschak.org/z1YhDPWyvzzkC79LFcF4DSTanKpEGpic8bAe
 
-[传统的间隔重复记忆卡片是原子化的](https://notes.andymatuschak.org/z4w269svvGhA2H5XFr6geaBbPTrxtJRpjt5TE)。每张卡片必须独立存在，可以在任何时候以任何顺序呈现。但是，这使得我们很难利用这些卡片来有效地传达一个本身就高度结构化且有序的概念。在实践中，概念通常依赖于其他概念，而情感显著性需要将这些概念与一个更大的整体联系起来（与[深刻的理解需要强烈的个人联系（也是其结果）](https://notes.andymatuschak.org/z5gCpoFJJThDFHK1a7Vv3ssxF3kkjeRaTrJHK)矛盾）。叙事在这些方面表现出色（[作为认知支架的叙事](https://notes.andymatuschak.org/zvHfreBts9DHWRtztZihrGKuPsP5j8LSPLQn)）。
+《[传统的间隔重复记忆卡片是原子化的](https://notes.andymatuschak.org/z4w269svvGhA2H5XFr6geaBbPTrxtJRpjt5TE)》。每张卡片必须独立存在，可以在任何时候以任何顺序呈现。但是，这使得我们很难利用这些卡片来有效地传达一个本身就高度结构化且有序的概念。在实践中，概念通常依赖于其他概念，而情感显著性需要将这些概念与一个更大的整体联系起来（与《[深刻的理解需要强烈的个人联系（也是其结果）](https://notes.andymatuschak.org/z5gCpoFJJThDFHK1a7Vv3ssxF3kkjeRaTrJHK)》矛盾）。叙事在这些方面表现出色（《[作为认知支架的叙事](https://notes.andymatuschak.org/zvHfreBts9DHWRtztZihrGKuPsP5j8LSPLQn)》）。
 
-一个重要的影响：[学习别人的间隔重复记忆卡片通常是无效的](https://notes.andymatuschak.org/z38fLX4H8oq9eXKnZH7wk8qDXfBLg2bxVyA2M)。
+一个重要的影响：《[学习别人的间隔重复记忆卡片通常是无效的](https://notes.andymatuschak.org/z38fLX4H8oq9eXKnZH7wk8qDXfBLg2bxVyA2M)》。
 
-这一观察是开发[助记媒介](https://notes.andymatuschak.org/z4rRX3qwSSJRsEkdXKwH2shamgHNeRthrMLiF)的主要动机之一：[助记媒介给原子化的间隔重复记忆卡片以结构](https://notes.andymatuschak.org/z5YjgWTaYfhWLrEbysgmDfFRcZ1yxgLeBeZac)
+这一观察是开发[助记媒介](https://notes.andymatuschak.org/z4rRX3qwSSJRsEkdXKwH2shamgHNeRthrMLiF)的主要动机之一：《[助记媒介给原子化的间隔重复记忆卡片以结构](https://notes.andymatuschak.org/z5YjgWTaYfhWLrEbysgmDfFRcZ1yxgLeBeZac)》
 
