--- a/ToolsForThought/卡片必须明确说明他们所期望的答案的「形状」.md
+++ b/ToolsForThought/卡片必须明确说明他们所期望的答案的「形状」.md
@@ -7,7 +7,7 @@
 问题：在短期内...投入是可变的。
 答案：有些
 
-挖空往往会加剧这个问题，因为它们必须使用语法结构来提示答案的形式。(参见[在间隔重复记忆系统中，填空卡似乎比问答卡产生更少的理解](https://notes.andymatuschak.org/zX7yi8v7qy3n1RfQDkFZFeyTCZPX3BVqy8sC))
+挖空往往会加剧这个问题，因为它们必须使用语法结构来提示答案的形式。(参见《[在间隔重复记忆系统中，填空卡似乎比问答卡产生更少的理解](https://notes.andymatuschak.org/zX7yi8v7qy3n1RfQDkFZFeyTCZPX3BVqy8sC)》)
 
 [Orion J Anderson](https://metarationality.com/now-with-orbit/comments#c6864)：
 
@@ -15,5 +15,5 @@
 
 [Soren Bjornstad](https://notes.andymatuschak.org/zzfor7LXCY9JBRjFmMaeLw5zV69GM2dSDQA) [指出](https://controlaltbackspace.org/memory/designing-precise-cards/#questions-should-be-context-free)，写得不好的卡片需要你同时记住「卡片在问什么」。
 
-相关文章：[间隔重复记忆卡片应该明确地产生一个具体的答案](https://notes.andymatuschak.org/z7wgJPD7gEoPwiBxuPNS8osvxczccM8Cq2j7F)
+相关文章：《[间隔重复记忆卡片应该明确地产生一个具体的答案](https://notes.andymatuschak.org/z7wgJPD7gEoPwiBxuPNS8osvxczccM8Cq2j7F)》
 
