--- a/ToolsForThought/学习别人的间隔重复记忆卡片通常是无效的.md
+++ b/ToolsForThought/学习别人的间隔重复记忆卡片通常是无效的.md
@@ -2,10 +2,10 @@
 
 原文：[Studying another person’s spaced repetition memory prompts is usually ineffective](https://notes.andymatuschak.org/z38fLX4H8oq9eXKnZH7wk8qDXfBLg2bxVyA2M)
 
-一旦理解了[间隔重复记忆系统使记忆成为一种选择](https://notes.andymatuschak.org/z4bR1HVvDUhMXDm5SJB4Tiw4xGbrm9AfXWgbc)和[学习越来越复杂的想法可能相当于形成更大的有效组块](https://notes.andymatuschak.org/z8VFVdTR19snWjFMxnyNabBCbmeoWrQ287TdT)，那么通过下载别人的[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)牌组来吞噬新知识是非常诱人的。但是，假设你之前从未学习过相关知识，你阅读教科书中关于细胞生物学的章节要比你背诵别人的牌组好得多。
+一旦理解了《[间隔重复记忆系统使记忆成为一种选择](https://notes.andymatuschak.org/z4bR1HVvDUhMXDm5SJB4Tiw4xGbrm9AfXWgbc)》和《[学习越来越复杂的想法可能相当于形成更大的有效组块](https://notes.andymatuschak.org/z8VFVdTR19snWjFMxnyNabBCbmeoWrQ287TdT)》，那么通过下载别人的[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)牌组来吞噬新知识是非常诱人的。但是，假设你之前从未学习过相关知识，你阅读教科书中关于细胞生物学的章节要比你背诵别人的牌组好得多。
 
-这是关于一个更普遍的现象的具体说法；更多内容请参见[单独的间隔重复记忆卡片是一种糟糕的交流媒介](https://notes.andymatuschak.org/z1YhDPWyvzzkC79LFcF4DSTanKpEGpic8bAe)。另外，大多数可下载的 SRS 牌组都做得很差：[写好间隔重复记忆卡片很难](https://notes.andymatuschak.org/z3ntJ7w9C3uapYp1m3gy2EK6PN788guzEoUNN)。
+这是关于一个更普遍的现象的具体说法；更多内容请参见《[单独的间隔重复记忆卡片是一种糟糕的交流媒介](https://notes.andymatuschak.org/z1YhDPWyvzzkC79LFcF4DSTanKpEGpic8bAe)》。另外，大多数可下载的 SRS 牌组都做得很差：《[写好间隔重复记忆卡片很难](https://notes.andymatuschak.org/z3ntJ7w9C3uapYp1m3gy2EK6PN788guzEoUNN)》。
 
 另请参阅：[助记媒介](https://notes.andymatuschak.org/z4rRX3qwSSJRsEkdXKwH2shamgHNeRthrMLiF)，它试图解决这个问题。
 
-有关文章：[亲自编写间隔重复卡片似乎能促进理解](https://notes.andymatuschak.org/z219EBYg9SbQzF372qudzgJpArt4Bmfhrczkg)
+有关文章：《[亲自编写间隔重复卡片似乎能促进理解](https://notes.andymatuschak.org/z219EBYg9SbQzF372qudzgJpArt4Bmfhrczkg)》
