--- a/ToolsForThought/现有的间隔重复系统不鼓励常青笔记.md
+++ b/ToolsForThought/现有的间隔重复系统不鼓励常青笔记.md
@@ -4,12 +4,12 @@
 
 Though notes in a [Spaced repetition memory system](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC) are atomic in the same way as [Evergreen notes](https://notes.andymatuschak.org/z4SDCZQeRo4xFEQ8H4qrSqd68ucpgE6LU155C) ([Evergreen notes should be atomic](https://notes.andymatuschak.org/z4Rrmh17vMBbauEGnFPTZSK3UmdsGExLRfZz1)), they’re in many ways *too* atomized ([Traditional spaced repetition memory prompts are atomized](https://notes.andymatuschak.org/z4w269svvGhA2H5XFr6geaBbPTrxtJRpjt5TE)). The form discourages incremental synthesis and distillation.
 
-尽管[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)中的笔记与[常青笔记](https://notes.andymatuschak.org/z4SDCZQeRo4xFEQ8H4qrSqd68ucpgE6LU155C)一样是原子化的（[常青笔记应该是原子化的](https://notes.andymatuschak.org/z4Rrmh17vMBbauEGnFPTZSK3UmdsGExLRfZz1)），但它们在很多方面**过于**原子化（[传统间隔重复记忆卡片是原子化的](https://notes.andymatuschak.org/z4w269svvGhA2H5XFr6geaBbPTrxtJRpjt5TE)）。这种形式不鼓励渐进式的综合和提炼。
+尽管[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)中的笔记与[常青笔记](https://notes.andymatuschak.org/z4SDCZQeRo4xFEQ8H4qrSqd68ucpgE6LU155C)一样是原子化的（《[常青笔记应该是原子化的](https://notes.andymatuschak.org/z4Rrmh17vMBbauEGnFPTZSK3UmdsGExLRfZz1)》），但它们在很多方面**过于**原子化（《[传统间隔重复记忆卡片是原子化的](https://notes.andymatuschak.org/z4w269svvGhA2H5XFr6geaBbPTrxtJRpjt5TE)》）。这种形式不鼓励渐进式的综合和提炼。
 
 The questions float in an undifferentiated mist, detached from any intrinsically meaningful context and not linked to relevant neighbors ([Evergreen notes should be densely linked](https://notes.andymatuschak.org/z2HUE4ABbQjUNjrNemvkTCsLa1LPDRuwh1tXC)), and not especially meant to be accessed except within the review experience. They’re not meant to be durable, growing units; they’re meant to be disposable flotsam. All this could be fine, if they had a clear relationship with a separate system for [Evergreen notes](https://notes.andymatuschak.org/z4SDCZQeRo4xFEQ8H4qrSqd68ucpgE6LU155C), but they don’t.
 
-这些问题漂浮在无差别的迷雾中，与任何内在的有意义的背景相分离，没有与相关的邻居相联系（[常青笔记应该有密集的联系](https://notes.andymatuschak.org/z2HUE4ABbQjUNjrNemvkTCsLa1LPDRuwh1tXC)），而且除了在复习的过程中，没有特别的意思被访问。它们并不意味着是持久的、不断增长的单元；它们意味着是一次性的浮渣。如果它们与一个单独的[常青笔记](https://notes.andymatuschak.org/z4SDCZQeRo4xFEQ8H4qrSqd68ucpgE6LU155C)系统有明确的关系，所有这些都可以是好的，但它们没有。
+这些问题漂浮在无差别的迷雾中，与任何内在的有意义的背景相分离，没有与相关的邻居相联系（《[常青笔记应该有密集的联系](https://notes.andymatuschak.org/z2HUE4ABbQjUNjrNemvkTCsLa1LPDRuwh1tXC)》），而且除了在复习的过程中，没有特别的意思被访问。它们并不意味着是持久的、不断增长的单元；它们意味着是一次性的浮渣。如果它们与一个单独的[常青笔记](https://notes.andymatuschak.org/z4SDCZQeRo4xFEQ8H4qrSqd68ucpgE6LU155C)系统有明确的关系，所有这些都可以是好的，但它们没有。
 
 Happily: [The mnemonic medium can be extended to one’s personal notes](https://notes.andymatuschak.org/z5ARNXtS5VxteskEW91S1yYTgAcLABNXsZuJE).
 
-令人高兴的是：[记忆媒介可以扩展到个人的笔记](https://notes.andymatuschak.org/z5ARNXtS5VxteskEW91S1yYTgAcLABNXsZuJE)。
+令人高兴的是：《[记忆媒介可以扩展到个人的笔记](https://notes.andymatuschak.org/z5ARNXtS5VxteskEW91S1yYTgAcLABNXsZuJE)》。
