--- a/ToolsForThought/在间隔重复记忆系统中，填空卡似乎比问答卡产生更少的理解.md
+++ b/ToolsForThought/在间隔重复记忆系统中，填空卡似乎比问答卡产生更少的理解.md
@@ -6,17 +6,17 @@
 
 可能涉及的其他因素：
 
-- [间隔重复记忆卡片应该从多个角度对思想进行编码](https://notes.andymatuschak.org/z3K5a9tM1wq1x4QnDfsUpTeYZWW3M9iUzMdfo)，但填空卡只是抓住了一个角度。
-- [间隔重复记忆卡片通常应聚焦于一个原子化单元](https://notes.andymatuschak.org/z8kPjeqPqJwLwqdVqPYBBTwfU3aczsFyvXFmx)，但填空卡通常是叙述性的散文，一般来说并不是那么聚焦。
-- [亲自编写间隔重复卡片似乎能促进理解](https://notes.andymatuschak.org/z219EBYg9SbQzF372qudzgJpArt4Bmfhrczkg)，而制作填空卡则要省力得多。
-- [间隔重复记忆卡片应该简洁](https://notes.andymatuschak.org/zysh2vANAg4bFAqaR5KmwzSR3oe7ybDj465e)，但填空卡通常是叙述性的散文，其中包括许多与卡片的具体内容不一定相关的词语。
-- 填空卡通常有歧义问题，因为它们使用句法结构来暗示它们在问什么；参见[间隔重复记忆卡片应该明确地产生一个具体的答案](https://notes.andymatuschak.org/z7wgJPD7gEoPwiBxuPNS8osvxczccM8Cq2j7F)和[卡片必须明确说明他们所期望的答案的「形状」](https://notes.andymatuschak.org/zpunuHuSjwJtCMogLev1JxXg9V6pSjznwJM)
+- 《[间隔重复记忆卡片应该从多个角度对思想进行编码](https://notes.andymatuschak.org/z3K5a9tM1wq1x4QnDfsUpTeYZWW3M9iUzMdfo)》，但填空卡只是抓住了一个角度。
+- 《[间隔重复记忆卡片通常应聚焦于一个原子化单元](https://notes.andymatuschak.org/z8kPjeqPqJwLwqdVqPYBBTwfU3aczsFyvXFmx)》，但填空卡通常是叙述性的散文，一般来说并不是那么聚焦。
+- 《[亲自编写间隔重复卡片似乎能促进理解](https://notes.andymatuschak.org/z219EBYg9SbQzF372qudzgJpArt4Bmfhrczkg)》，而制作填空卡则要省力得多。
+- 《[间隔重复记忆卡片应该简洁](https://notes.andymatuschak.org/zysh2vANAg4bFAqaR5KmwzSR3oe7ybDj465e)》，但填空卡通常是叙述性的散文，其中包括许多与卡片的具体内容不一定相关的词语。
+- 填空卡通常有歧义问题，因为它们使用句法结构来暗示它们在问什么；参见《[间隔重复记忆卡片应该明确地产生一个具体的答案](https://notes.andymatuschak.org/z7wgJPD7gEoPwiBxuPNS8osvxczccM8Cq2j7F)》和《[卡片必须明确说明他们所期望的答案的「形状」](https://notes.andymatuschak.org/zpunuHuSjwJtCMogLev1JxXg9V6pSjznwJM)》
 
 我不知道关于这些问题的任何具体证据。
 
-另一方面，挖空是一种极其高效的制作新卡片的方式，而[间隔重复系统能力的限制因素是写出足够多的好卡片](https://notes.andymatuschak.org/z4zvsYb38iMhkDgZzKzjqpzKKtwPhvt4FuzcS)。如果要在填空卡和什么都不写之间做出选择，那么填空卡肯定更好！它们也更具通用性：[填空卡可以用来创建典型的 N 面抽认卡](https://notes.andymatuschak.org/zgpjhmJfdVNcrGroeKW1VQ92YLGCftpyVPc)。
+另一方面，挖空是一种极其高效的制作新卡片的方式，而《[间隔重复系统能力的限制因素是写出足够多的好卡片](https://notes.andymatuschak.org/z4zvsYb38iMhkDgZzKzjqpzKKtwPhvt4FuzcS)》。如果要在填空卡和什么都不写之间做出选择，那么填空卡肯定更好！它们也更具通用性：《[填空卡可以用来创建典型的 N 面抽认卡](https://notes.andymatuschak.org/zgpjhmJfdVNcrGroeKW1VQ92YLGCftpyVPc)》。
 
-请注意，这些观察是关于填空卡对记忆的影响。填空卡对于[穿越时间的文本](https://notes.andymatuschak.org/z73hGbYFm7bjV3yYwK29MvbBZEcwK6kWyduqV)类应用程序来说可能很有效，比如[助记媒介可以让读者随着时间的推移与材料保持联系](https://notes.andymatuschak.org/z7tjqSxGsJ53tXsGkRpchsECWcMsW3sFUw86U)：这就是 [Readwise](https://notes.andymatuschak.org/z2ewMN8Hzd8gt4qyfQV1ognJ5PQs3CXxDfCJ) 强调它们的理论背后的原因。
+请注意，这些观察是关于填空卡对记忆的影响。填空卡对于《[穿越时间的文本](https://notes.andymatuschak.org/z73hGbYFm7bjV3yYwK29MvbBZEcwK6kWyduqV)》类应用程序来说可能很有效，比如《[助记媒介可以让读者随着时间的推移与材料保持联系](https://notes.andymatuschak.org/z7tjqSxGsJ53tXsGkRpchsECWcMsW3sFUw86U)》：这就是 [Readwise](https://notes.andymatuschak.org/z2ewMN8Hzd8gt4qyfQV1ognJ5PQs3CXxDfCJ) 强调它们的理论背后的原因。
 
 ------
 
