--- a/ToolsForThought/间隔重复记忆卡片应该简洁.md
+++ b/ToolsForThought/间隔重复记忆卡片应该简洁.md
@@ -2,7 +2,7 @@
 
 原文：[Spaced repetition memory prompts should be concise](https://notes.andymatuschak.org/zysh2vANAg4bFAqaR5KmwzSR3oe7ybDj465e)
 
-与[间隔重复记忆卡片通常应聚焦于一个原子化单元](https://notes.andymatuschak.org/z8kPjeqPqJwLwqdVqPYBBTwfU3aczsFyvXFmx)相关但又有区别，一般来说，最好保持[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)卡片简洁。
+与《[间隔重复记忆卡片通常应聚焦于一个原子化单元](https://notes.andymatuschak.org/z8kPjeqPqJwLwqdVqPYBBTwfU3aczsFyvXFmx)》相关但又有区别，一般来说，最好保持[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)卡片简洁。
 
 例如，Wozniak（1999）给出了一个改进卡片的例子：
 
@@ -13,11 +13,11 @@
 > 问：PageMaker 输给了......
 > 答：Quark
 
-一个关键的原因是，简洁使复习环节保持了一种轻快、流畅的节奏。令人感觉「沉重」的问题会使人难以集中注意力，但也许更重要的是，它们会使复习环节感觉像一件苦差事：[在间隔重复记忆系统中，优化的关键是复习环节及其内容的情感联系](https://notes.andymatuschak.org/z64si3kA3bkCgz3Bsr5YNWsAAQUR2pmXab63T)。
+一个关键的原因是，简洁使复习环节保持了一种轻快、流畅的节奏。令人感觉「沉重」的问题会使人难以集中注意力，但也许更重要的是，它们会使复习环节感觉像一件苦差事：《[在间隔重复记忆系统中，优化的关键是复习环节及其内容的情感联系](https://notes.andymatuschak.org/z64si3kA3bkCgz3Bsr5YNWsAAQUR2pmXab63T)》。
 
 我不明白原理，但简洁的措辞似乎常常能帮助我以较少的重复次数记住答案。这可能是因为冗长的问题使我很难把注意力放在最重要的提取细节上。也可能只是因为冗长的问题降低了我的注意力。
 
-随着卡片内容变得越来越长，它就越有可能包含一个能触发答案的词或纹理，但与答案的含义没有关系（「模式匹配」）：[编写间隔重复记忆卡片应避免浅层次的「模式匹配」](https://notes.andymatuschak.org/z6S3cEUXNktEEZEzRqUXh5ivRNMWjJ2nq72Ys)。
+随着卡片内容变得越来越长，它就越有可能包含一个能触发答案的词或纹理，但与答案的含义没有关系（「模式匹配」）：《[编写间隔重复记忆卡片应避免浅层次的「模式匹配」](https://notes.andymatuschak.org/z6S3cEUXNktEEZEzRqUXh5ivRNMWjJ2nq72Ys)》。
 
 ------
 
