--- a/ToolsForThought/在间隔重复记忆系统中，优化的关键是复习环节及其内容的情感联系.md
+++ b/ToolsForThought/在间隔重复记忆系统中，优化的关键是复习环节及其内容的情感联系.md
@@ -1,39 +1,23 @@
-# The critical thing to optimize in spaced repetition memory systems is emotional connection to the review session and its contents
-
 # 在间隔重复记忆系统中，优化的关键是复习环节及其内容的情感联系
 
-Many researchers are trying to make a more efficient [Spaced repetition memory system](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC), but I believe that the critical thing to optimize is *emotional connection to the review session and its contents*—and conversely, to ruthlessly minimize elements which provoke a sigh. These systems, left to their natural inclinations, naturally decay to produce dutiful sessions which feel disconnected from anything that matters to you.
+原文：[The critical thing to optimize in spaced repetition memory systems is emotional connection to the review session and its contents](https://notes.andymatuschak.org/z64si3kA3bkCgz3Bsr5YNWsAAQUR2pmXab63T)
 
-许多研究人员都在试图制造一个更高效的[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)，但我认为，要优化的关键是**与复习课及其内容的情感联系**，反之，要无情地减少引发叹息的元素。这些系统，如果任由它们的自然倾向发展，就会自然而然地腐化，产生尽职尽责的会议，而这些会议感觉与任何与你有关的事情脱节。
+许多研究人员都在试图制造一个更高效的[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)，但我认为，要优化的关键是**与复习环节及其内容的情感联系**——反之，要坚决地减少引起叹气的元素。这些系统，如果任由它们的自然倾向发展，就会自然而然地腐化，产生尽职尽责的复习环节，而这些环节感觉与你关心的任何事情脱节。
 
-Part of this is writing good prompts: [What are the most important attributes of good spaced repetition memory prompts?](https://notes.andymatuschak.org/z42J1vxsMjhkdbrqVfoqjiEesSzfaEqurBtoJ). But this isn’t enough. Review sessions need ongoing grooming to stay interesting. If you don’t add anything new for a while, your sessions will feel stale: [Spaced repetition review sessions often become boring and detached without a steady stream of new prompts](https://notes.andymatuschak.org/z4hNAfe6TrqjxCydF3CaAVn1svaqiu86JFVBz). If you often forget an answer, you must refactor the question or risk future eye-rolls.
+一部分是写好卡片：《[高质量的间隔重复记忆卡片最重要的属性是什么？](https://notes.andymatuschak.org/z42J1vxsMjhkdbrqVfoqjiEesSzfaEqurBtoJ)》但这还不够。复习环节需要不断梳理，以保持趣味性。如果你有一段时间没有添加新卡片，你的复习环节就会变得不新鲜：《[如果没有源源不断的新卡片，间隔重复的复习环节往往会变得枯燥无味和脱离实际](https://notes.andymatuschak.org/z4hNAfe6TrqjxCydF3CaAVn1svaqiu86JFVBz)》。如果你经常忘记答案，你就必须重构问题，否则以后你可能会翻白眼。
 
-其中的一部分是写好的提示语。[高质量的间隔重复记忆卡片的最重要属性是什么？](https://notes.andymatuschak.org/z42J1vxsMjhkdbrqVfoqjiEesSzfaEqurBtoJ)。但这还不够。复习环节需要不断梳理，以保持趣味性。如果你有一段时间没有添加新的东西，你的复习环节就会感到陈旧：[如果没有源源不断的新卡片，间隔重复的复习环节往往会变得枯燥无味和脱离实际](https://notes.andymatuschak.org/z4hNAfe6TrqjxCydF3CaAVn1svaqiu86JFVBz)。如果你经常忘记一个答案，你就必须重新构思问题，否则就有可能被人看扁。
+对我来说，最重要的维护类型涉及我不断变化的兴趣。我可能会偶然发现一篇迷人的论文，并写下几十张卡片，以帮助我内化细节。现在快进 6 个月。在快乐的情况下，当这些问题再次出现时，我很兴奋，因为它们将我与这篇迷人的论文的观点重新联系起来，现在通过我中间的经历，这些观点显得更有内涵。很多时候，我只是对仍然记得这些细节而感到感激。但有时，我不再觉得这篇论文非常有趣；回答这些问题只感觉是个苦差事。它们已经成为「孤岛卡片」——《[避免孤立的间隔重复记忆卡片](https://notes.andymatuschak.org/z8QtbrR4cxDshTYBq3RCfwUVkXS8mSjRmAnqk)》。
 
-For me, the most important type of maintenance concerns my shifting interests. I might stumble on a fascinating paper and write a few dozen prompts to help me internalize the details. Now fast forward six months. In the happy case, I’m thrilled when these questions recur because they reconnect me to the ideas of this fascinating paper, which now appear richer through the lens of my intervening experiences. Much of the time, I simply feel grateful to still remember the details. But sometimes, I no longer find the paper very interesting; the questions just feel like a chore. They’ve become “orphan prompts”—[Avoid orphan spaced repetition memory prompts](https://notes.andymatuschak.org/z8QtbrR4cxDshTYBq3RCfwUVkXS8mSjRmAnqk).
+一个可能的解决方案：《[「跳过」机制可能有助于间隔重复记忆系统复习环节保持情感联系](https://notes.andymatuschak.org/z4xgge5NF7AmCJKrsghgYmzaXKcM5hM8P8vnn)》。
 
-对我来说，最重要的维护类型涉及我不断变化的兴趣。我可能会偶然发现一篇迷人的论文，并写下几十张卡片，以帮助我内化细节。现在快进 6 个月。在快乐的情况下，当这些问题再次出现时，我很兴奋，因为它们将我与这篇迷人的论文的观点重新联系起来，现在通过我中间的经历，这些观点显得更加丰富。很多时候，我只是对仍然记得这些细节而感到感激。但有时，我不再觉得这篇论文非常有趣；这些问题只是感觉是个苦差事。它们已经成为「孤岛卡片」——[避免鼓励的间隔重复记忆卡片](https://notes.andymatuschak.org/z8QtbrR4cxDshTYBq3RCfwUVkXS8mSjRmAnqk)。
-
-One possible solution: [A “skip” mechanism may help spaced repetition memory system sessions remain emotionally connected](https://notes.andymatuschak.org/z4xgge5NF7AmCJKrsghgYmzaXKcM5hM8P8vnn).
-
-一个可能的解决方案：[「跳过」机制可能有助于间隔重复记忆系统会话保持情感上的联系](https://notes.andymatuschak.org/z4xgge5NF7AmCJKrsghgYmzaXKcM5hM8P8vnn)。
-
-Part of the [Taking emotion seriously](https://notes.andymatuschak.org/zWiPabJxBUe2LyKaegZRLNQYAE653PXewkhU) umbrella.
-
-属于[认真对待情感](https://notes.andymatuschak.org/zWiPabJxBUe2LyKaegZRLNQYAE653PXewkhU)的范畴。
+属于《[认真对待情感](https://notes.andymatuschak.org/zWiPabJxBUe2LyKaegZRLNQYAE653PXewkhU)》的范畴。
 
 ------
 
-Q. Most SRM researchers focus on optimizing the scheduler, but I think it’s most important to optimize…
-A. Emotional connection to the review session and its contents
-
-Q. 大多数 SRM 研究者都集中在优化算法上，但我认为最重要的是优化...
-A. 复习环节及其内容的情感联系
-
-## References
+问：大多数 SRM 研究者都集中在优化算法上，但我认为最重要的是优化...
+答：复习环节及其内容的情感联系
 
 ## 参考文献
 
-My Patreon post elaborating this topic: [“Skip”: exponential-backoff deferral mechanisms and fuzzy inboxes | Andy Matuschak on Patreon](https://www.patreon.com/posts/skip-exponential-40672377)
+我的 Patreon 帖子阐述了这个话题：[「跳过」：指数后退延迟机制和模糊收件箱| Andy Matuschak on Patreon](https://www.patreon.com/posts/skip-exponential-40672377)
 
-我的Patreon帖子阐述了这个话题。[「跳过」：指数-后退推延机制和模糊收件箱| Andy Matuschak on Patreon](https://www.patreon.com/posts/skip-exponential-40672377)
