翻译 人们对实用知识的遗忘有多快？

--- a/ToolsForThought/人们似乎忘记了他们所读的大部分内容，而且他们大多没有注意到这一点.md
+++ b/ToolsForThought/人们似乎忘记了他们所读的大部分内容，而且他们大多没有注意到这一点.md
@@ -6,7 +6,7 @@
 
 更重要的是：当这种情况发生时，人们似乎很惊讶。他们似乎总是高估自己从一本书中吸收了多少东西。
 
-见《[人们对实践知识的遗忘有多快？](https://notes.andymatuschak.org/zhq3W2VLpCJK8pmMwMxtxpC72Sd3zeZccMCp)》
+见《[人们对实用知识的遗忘有多快？](https://notes.andymatuschak.org/zhq3W2VLpCJK8pmMwMxtxpC72Sd3zeZccMCp)》
 
 这种观察是不幸的，原因有很多，但其中有二：《[深刻的理解需要详细的基础知识](https://notes.andymatuschak.org/zQiumA4k3SXo1GeRVJpsrVaBRETAoyYmSERS)》和《[复杂的概念可能很难学习，部分原因是工作记忆容纳不下其组分](https://notes.andymatuschak.org/z6eTZz16YRGs2PyWyc3qe1B9oJ7swmnCU54hZ)》。
 
