翻译 复杂的概念可能很难学习，部分原因是工作记忆容纳不下其组分

--- a/ToolsForThought/复杂的概念可能很难学习，部分原因是工作记忆容纳不下其组分.md
+++ b/ToolsForThought/复杂的概念可能很难学习，部分原因是工作记忆容纳不下其组分.md
@@ -2,29 +2,16 @@
 
 原文：[Complex ideas may be hard to learn in part because their components overflow working memory](https://notes.andymatuschak.org/z6eTZz16YRGs2PyWyc3qe1B9oJ7swmnCU54hZ)
 
-Ideas typically build on other ideas. Some directly combine a few prior insights; others might be difficult to express without special notation or terminology. When an idea has few dependencies, you can introduce them all, then immediately express the idea: green means go; red means go; a green or red stoplight pointing right means you can or can’t turn right.
+概念通常建立在其他概念之上。有些直接结合了一些已有的见解；有些则可能在没有特殊符号或术语的情况下难以表达。当一个概念的依赖很少时，你可以把它们全部介绍出来，然后立即传达这个概念：绿色意味着前进；红色意味着停止；绿色或红色的信号灯指向右边意味着你可以或不可以右转。
 
-概念通常建立在其他概念之上。有些直接结合了之前的一些见解；有些则可能在没有特殊符号或术语的情况下难以表达。当一个概念的依赖很少时，你可以把它们全部介绍出来，然后立即表达这个概念：绿色意味着前进；红色意味着前进；绿色或红色的红绿灯指向右边意味着你可以或不可以右转。
+但是，如果你刚刚被介绍了一群新术语，你可能不会从一个同时使用许多术语的句子中吸收多少东西。你不可能一下子在工作记忆中同时处理所有这些术语，而且你也没有时间对其中任何一个术语进行更持久的编码。
 
-But if you’ve just been introduced to a zoo of new terms, you probably won’t absorb much from a sentence which uses many of those terms at once. You can’t juggle all those terms in working memory at once, and you haven’t had time to encode any of them more durably.
+这不仅仅是一个时间问题。《[人们似乎忘记了他们所读的大部分内容，而且他们大多没有注意到这一点](https://notes.andymatuschak.org/z3d6dFhTA5zTmykZ3zh4Y2vCw3aVbUxRiQQcc)》，所以即使你给自己时间来吸收前置概念，你也可能会忘记其中的许多内容。
 
-但是，如果你刚刚被介绍给一群新术语，你可能不会从一个同时使用许多术语的句子中吸收多少东西。你不可能一下子在工作记忆中玩弄所有这些术语，而且你也没有时间对其中任何一个术语进行更持久的编码。
+这可能是为什么一些主题如此难以理解的部分原因。如果你想学习量子计算，这需要新的符号，新的术语和新的概念。就好像你在读一本开头是汉语的书，但你发现越来越多的英语单词和句子掺在里面，直到你突然发现整本书都是英语，而你却一点都不明白。你需要吸收这些词汇和语法，然后才能跟上情节。
 
-It’s not just a matter of timing. [People seem to forget most of what they read, and they mostly don’t notice](https://notes.andymatuschak.org/z3d6dFhTA5zTmykZ3zh4Y2vCw3aVbUxRiQQcc), so even if you gave yourself time to absorb prerequisite ideas, you’d likely forget many of them.
-
-这不仅仅是一个时间问题。《[人们似乎忘记了他们所读的大部分内容，而且他们大多没有注意到这一点](https://notes.andymatuschak.org/z3d6dFhTA5zTmykZ3zh4Y2vCw3aVbUxRiQQcc)》，所以即使你给自己时间来吸收先决条件的想法，你也可能会忘记其中的许多内容。
-
-This may be part of why some topics are so challenging to understand. If you’re trying to learn quantum computing, that requires new notation, new terms, and new concepts. It’s as if you’re reading a book which begins in English, but you find more and more Spanish words and sentences sprinkled in, until suddenly you notice that the whole book’s in Spanish, and you don’t understand any of it. You’ll need to absorb the vocabulary and grammar before you can follow the plot.
-
-这可能是为什么一些主题如此难以理解的部分原因。如果你想学习量子计算，这需要新的符号，新的术语和新的概念。就好像你在读一本开始是英语的书，但你发现越来越多的西班牙语单词和句子洒在里面，直到你突然发现整本书都是西班牙语，而你却一点都不明白。你需要吸收这些词汇和语法，然后才能跟上情节。
-
-> Any relatively complicated activity requires holding more information in our heads than short-term memory allows.
+> 任何相对复杂的活动都需要在我们的头脑中保持比短期记忆所允许的更多信息。
 > (Ericsson and Pool, 2016, p. 61)
->
-> 任何相对复杂的活动都需要在我们的头脑中持有比短期记忆所允许的更多信息。
-> (Ericsson and Pool, 2016, p. 61)
-
-More concretely: [Learning increasingly complex ideas may amount to forming larger effective chunk sizes](https://notes.andymatuschak.org/z8VFVdTR19snWjFMxnyNabBCbmeoWrQ287TdT)
 
 更具体地说：《[学习越来越复杂的想法可能相当于形成更大的有效组块](https://notes.andymatuschak.org/z8VFVdTR19snWjFMxnyNabBCbmeoWrQ287TdT)》
 
