--- a/ToolsForThought/高质量的间隔重复记忆卡片最重要的属性是什么？.md
+++ b/ToolsForThought/高质量的间隔重复记忆卡片最重要的属性是什么？.md
@@ -10,8 +10,8 @@
 
 - 《[间隔重复记忆卡片应该简洁](https://notes.andymatuschak.org/zysh2vANAg4bFAqaR5KmwzSR3oe7ybDj465e)》
 - 《[间隔重复记忆卡片通常应聚焦于一个原子化单元](https://notes.andymatuschak.org/z8kPjeqPqJwLwqdVqPYBBTwfU3aczsFyvXFmx)》
-- 《[间隔重复记忆卡片应该从多个角度对思想进行编码](https://notes.andymatuschak.org/z3K5a9tM1wq1x4QnDfsUpTeYZWW3M9iUzMdfo)》
-  - 《[间隔重复记忆卡片应将思想联系起来](https://notes.andymatuschak.org/z49EwwPL1CzKHTyLHXwJJH7hsciCg772Vm5WJ)》
+- 《[间隔重复记忆卡片应该从多个角度对概念进行编码](https://notes.andymatuschak.org/z3K5a9tM1wq1x4QnDfsUpTeYZWW3M9iUzMdfo)》
+  - 《[间隔重复记忆卡片应连接和联系概念](https://notes.andymatuschak.org/z49EwwPL1CzKHTyLHXwJJH7hsciCg772Vm5WJ)》
 - 《[间隔重复记忆卡片应该明确地产生一个具体的答案](https://notes.andymatuschak.org/z7wgJPD7gEoPwiBxuPNS8osvxczccM8Cq2j7F)》
   - 《[卡片必须明确说明他们所期望的答案的「形状」](https://notes.andymatuschak.org/zpunuHuSjwJtCMogLev1JxXg9V6pSjznwJM)》
 - 《[间隔重复记忆卡片应确保复习者必须从记忆中提取出答案](https://notes.andymatuschak.org/z7XLLk9aqBtJLDtP9kemBA87bDtjhpxst1osT)》
