翻译 学习越来越复杂的概念可能相当于形成更大的有效组块

--- a/ToolsForThought/复杂的概念可能很难学习，部分原因是工作记忆容纳不下其组分.md
+++ b/ToolsForThought/复杂的概念可能很难学习，部分原因是工作记忆容纳不下其组分.md
@@ -13,7 +13,7 @@
 > 任何相对复杂的活动都需要在我们的头脑中保持比短期记忆所允许的更多信息。
 > (Ericsson and Pool, 2016, p. 61)
 
-更具体地说：《[学习越来越复杂的想法可能相当于形成更大的有效组块](https://notes.andymatuschak.org/z8VFVdTR19snWjFMxnyNabBCbmeoWrQ287TdT)》
+更具体地说：《[学习越来越复杂的概念可能相当于形成更大的有效组块](https://notes.andymatuschak.org/z8VFVdTR19snWjFMxnyNabBCbmeoWrQ287TdT)》
 
 ------
 
