翻译 间隔重复记忆系统 [施工中]

--- a/ToolsForThought/间隔重复记忆系统.md
+++ b/ToolsForThought/间隔重复记忆系统.md
@@ -4,16 +4,16 @@
 
 A spaced-repetition memory system combines the [Testing effect](https://notes.andymatuschak.org/z45mhbpabsigFceeSiRyDXZdvcRqvE2A1xMsn) and the [Spacing effect](https://notes.andymatuschak.org/z5oCe7JTrkYfmb6SHE4n5HxisE7PdwS6nmXEw) to enable efficient memorization of many thousands of facts ([Spaced repetition memory systems are extremely efficient](https://notes.andymatuschak.org/z5rVJfPsyCU3pHBbhwef9DNR5fohTHCQFJWir)). Some people also use them for a broader set of tasks (see below). [Spaced repetition memory systems make memory a choice](https://notes.andymatuschak.org/z4bR1HVvDUhMXDm5SJB4Tiw4xGbrm9AfXWgbc), but they’re not just for rote facts: [Spaced repetition memory systems can be used to develop conceptual understanding](https://notes.andymatuschak.org/z6UZP7P4sRNgRKSvNj7tMV5uW6dDhwwbdZCy9).
 
-间隔重复记忆系统结合了[测试效应](https://notes.andymatuschak.org/z45mhbpabsigFceeSiRyDXZdvcRqvE2A1xMsn)和[间隔效应](https://notes.andymatuschak.org/z5oCe7JTrkYfmb6SHE4n5HxisE7PdwS6nmXEw)，能够用于高效地记忆成千上万的事实（[间隔重复记忆系统非常高效](https://notes.andymatuschak.org/z5rVJfPsyCU3pHBbhwef9DNR5fohTHCQFJWir)）。有些人还将它们用于更广泛的任务（见下文）。《[间隔重复记忆系统使记忆成为一种选择](https://notes.andymatuschak.org/z4bR1HVvDUhMXDm5SJB4Tiw4xGbrm9AfXWgbc)》，但它们不只是用于背诵事实：《[间隔重复记忆系统可用于发展概念性理解](https://notes.andymatuschak.org/z6UZP7P4sRNgRKSvNj7tMV5uW6dDhwwbdZCy9)》。
+间隔重复记忆系统结合了[测试效应](https://notes.andymatuschak.org/z45mhbpabsigFceeSiRyDXZdvcRqvE2A1xMsn)和[间隔效应](https://notes.andymatuschak.org/z5oCe7JTrkYfmb6SHE4n5HxisE7PdwS6nmXEw)，能够用于高效地记忆成千上万的事实（[间隔重复记忆系统非常高效](https://notes.andymatuschak.org/z5rVJfPsyCU3pHBbhwef9DNR5fohTHCQFJWir)）。有些人还将它们用于更广泛的任务（见下文）。《[间隔重复记忆系统使记忆成为一种选择](https://notes.andymatuschak.org/z4bR1HVvDUhMXDm5SJB4Tiw4xGbrm9AfXWgbc)》，但它们不只是用于背诵事实：《[间隔重复记忆系统可用于加深概念理解](https://notes.andymatuschak.org/z6UZP7P4sRNgRKSvNj7tMV5uW6dDhwwbdZCy9)》。
 
 The first consumer system of this kind was [Supermemo](https://notes.andymatuschak.org/z6Bub13H3u5SKX7Yzbt8GBuK86HPTXSU1TdAK), created by [Piotr Wozniak](https://notes.andymatuschak.org/z7ErFZbV91EoBMFNNRseVh3xk1AeJhwq3fZzS). It adopted and popularized the term “spaced repetition”; prior literature had used a variety of terms (often referring to more specific facets of the underlying phenomenon).
 
-这类系统中，第一个面向消费者的是 [Supermemo](https://notes.andymatuschak.org/z6Bub13H3u5SKX7Yzbt8GBuK86HPTXSU1TdAK)，由 [Piotr Wozniak](https://notes.andymatuschak.org/z7ErFZbV91EoBMFNNRseVh3xk1AeJhwq3fZzS) 创造。它使用并推广了「间隔重复」这一术语；之前的文献使用了各种术语（通常指的是基本现象的更具体方面）。
+这类系统中，第一个面向消费者的是 [Supermemo](https://notes.andymatuschak.org/z6Bub13H3u5SKX7Yzbt8GBuK86HPTXSU1TdAK)，由 [Piotr Wozniak](https://notes.andymatuschak.org/z7ErFZbV91EoBMFNNRseVh3xk1AeJhwq3fZzS) 创造。它使用并推广了「间隔重复」这一术语；之前的文献使用了各种术语（通常指的是基本现象更具体的方面）。
 
 - Related systems and possibilities:
 - 相关的系统和可能性：
   - [Differences in my approach to spaced repetition systems](https://notes.andymatuschak.org/z241Vpk8PMkfkGwMQ6U2PRjpweWhD8yAsVCR)
-  - [我实现的间隔重复系统的不同之处](https://notes.andymatuschak.org/z241Vpk8PMkfkGwMQ6U2PRjpweWhD8yAsVCR)
+  - [我的间隔重复系统方法的不同之处](https://notes.andymatuschak.org/z241Vpk8PMkfkGwMQ6U2PRjpweWhD8yAsVCR)
   - Implementations:
   - 实现：
     - Traditional:
@@ -22,7 +22,7 @@ The first consumer system of this kind was [Supermemo](https://notes.andymatusch
       - [Mnemosyne](https://notes.andymatuschak.org/z7sh4NRXqTaBmXtj3ioDn5fKwEn7qvtjGJhkC)
       - [Anki](https://notes.andymatuschak.org/z4zzRb7NCkV71THoNKMzWkw6QRWKr1QCtiAf1)
     - Unusual variations:
-    - 不寻常的变体：
+    - 特殊的变体：
       - [Mnemonic medium](https://notes.andymatuschak.org/z4rRX3qwSSJRsEkdXKwH2shamgHNeRthrMLiF)
       - [Execute Program](https://notes.andymatuschak.org/z2LGZ8cXBcQMP7YuAHbeVyCSLZoiMXvQNKCok)
       - [RemNote](https://notes.andymatuschak.org/z6jecLFTkHG5MCFDvhwsd2p8YWykaHr6ZkHTi)
@@ -30,7 +30,7 @@ The first consumer system of this kind was [Supermemo](https://notes.andymatusch
       - [Readwise](https://notes.andymatuschak.org/z2ewMN8Hzd8gt4qyfQV1ognJ5PQs3CXxDfCJ)
       - [Chessable MoveTrainer](https://notes.andymatuschak.org/z8MgFD7B7QRqqGZXsJqeGpm5PJhroPwb6BW2V)
   - [Unusual applications of spaced repetition memory systems](https://notes.andymatuschak.org/zrs5GnK6DEm1NcajMfqJ1n93PZwSHCEP9Drt)
-  - [间隔重复记忆系统的非主流应用](https://notes.andymatuschak.org/zrs5GnK6DEm1NcajMfqJ1n93PZwSHCEP9Drt)
+  - [间隔重复记忆系统的特殊应用](https://notes.andymatuschak.org/zrs5GnK6DEm1NcajMfqJ1n93PZwSHCEP9Drt)
   - [Spaced repetition systems can be used to program attention](https://notes.andymatuschak.org/z2gqazXUkf9qyFjMQg4W3dw6yegnAJszvDywN)
   - [间隔重复系统可用于对注意力进行编程](https://notes.andymatuschak.org/z2gqazXUkf9qyFjMQg4W3dw6yegnAJszvDywN)
     - [Spaced repetition systems as catechism](https://notes.andymatuschak.org/z39D31syJUE1gtNTREogSZiG6LDSuwygN5NDt)
@@ -38,7 +38,7 @@ The first consumer system of this kind was [Supermemo](https://notes.andymatusch
   - [Spaced repetition memory systems can be used to prompt application, synthesis, and creation](https://notes.andymatuschak.org/zE8PK4UUAAWK6LEcmr8jja8JdxpUxcf1FUCX)
   - [间隔重复记忆系统可以用来促进应用、综合和创造](https://notes.andymatuschak.org/zE8PK4UUAAWK6LEcmr8jja8JdxpUxcf1FUCX)
 - On properties of memory systems:
-- 关于记忆系统的特性：
+- 记忆系统的特性：
   - [What’s the maximum intake rate of an efficient spaced repetition memory system?](https://notes.andymatuschak.org/z4J3EVtt8aQoZg8a5y48AmfYL4GauDjBSzw2s)
   - [高效的间隔重复记忆系统的最大吸收率是多少？](https://notes.andymatuschak.org/z4J3EVtt8aQoZg8a5y48AmfYL4GauDjBSzw2s)
     - [Optimizing spaced repetition system schedules](https://notes.andymatuschak.org/z5N3g1Tc9jQMmRnExZxY23cUufNS1g6srNAbU)
@@ -60,45 +60,45 @@ The first consumer system of this kind was [Supermemo](https://notes.andymatusch
     - [The limiting factor in spaced repetition system capacity is writing enough good prompts](https://notes.andymatuschak.org/z4zvsYb38iMhkDgZzKzjqpzKKtwPhvt4FuzcS)
     - [间隔重复系统能力的限制因素是写出足够多的好卡片](https://notes.andymatuschak.org/z4zvsYb38iMhkDgZzKzjqpzKKtwPhvt4FuzcS)
     - [Using machine learning models to generate good spaced repetition prompts](https://notes.andymatuschak.org/z2DY7qsP5iHsiA5hxUHheV8hu7Xe96vdGyYX)
-    - [使用机器学习模型来生成良好的间隔性重复卡片](https://notes.andymatuschak.org/z2DY7qsP5iHsiA5hxUHheV8hu7Xe96vdGyYX)
+    - [使用机器学习模型来生成高质量的间隔重复卡片](https://notes.andymatuschak.org/z2DY7qsP5iHsiA5hxUHheV8hu7Xe96vdGyYX)
   - [The critical thing to optimize in spaced repetition memory systems is emotional connection to the review session and its contents](https://notes.andymatuschak.org/z64si3kA3bkCgz3Bsr5YNWsAAQUR2pmXab63T)
-  - [在间隔重复记忆系统中需要优化的关键是与复习课及其内容的情感联系](https://notes.andymatuschak.org/z64si3kA3bkCgz3Bsr5YNWsAAQUR2pmXab63T)
+  - [在间隔重复记忆系统中，优化的关键是复习环节及其内容的情感联系](https://notes.andymatuschak.org/z64si3kA3bkCgz3Bsr5YNWsAAQUR2pmXab63T)
     - [Regular spaced repetition memory practice is an onerous habit to adopt](https://notes.andymatuschak.org/zyk3ZCEVSB4Zwej3Xd4CJ2g1FynRFTZGJpQN)
-    - [定期进行间隔性重复记忆练习是一种繁重的习惯](https://notes.andymatuschak.org/zyk3ZCEVSB4Zwej3Xd4CJ2g1FynRFTZGJpQN)
+    - [定期进行间隔重复记忆练习是一种繁重的习惯](https://notes.andymatuschak.org/zyk3ZCEVSB4Zwej3Xd4CJ2g1FynRFTZGJpQN)
       - [Spaced repetition memory systems don’t rapidly demonstrate their benefits](https://notes.andymatuschak.org/z2evK9drA5aJp4tHcXgV4Pri6GAnEyWyb4YwS)
-      - [间隔性重复记忆系统并不能迅速显示出它的好处](https://notes.andymatuschak.org/z2evK9drA5aJp4tHcXgV4Pri6GAnEyWyb4YwS)
+      - [间隔重复记忆系统并不能迅速展现出它的好处](https://notes.andymatuschak.org/z2evK9drA5aJp4tHcXgV4Pri6GAnEyWyb4YwS)
       - [Spaced repetition memory systems make you feel like your memory is worse than it really is](https://notes.andymatuschak.org/z4vCGd9Gt715AXtqTXxoKjrEawbvT9o9NA6DC)
-      - [间隔性重复记忆系统让你觉得你的记忆力比实际情况要差](https://notes.andymatuschak.org/z4vCGd9Gt715AXtqTXxoKjrEawbvT9o9NA6DC)
+      - [间隔重复记忆系统让你觉得你的记忆力比实际情况要差](https://notes.andymatuschak.org/z4vCGd9Gt715AXtqTXxoKjrEawbvT9o9NA6DC)
     - [Spaced repetition review sessions often become boring and detached without a steady stream of new prompts](https://notes.andymatuschak.org/z4hNAfe6TrqjxCydF3CaAVn1svaqiu86JFVBz)
-    - [如果没有源源不断的新卡片，间隔性重复的复习课往往会变得枯燥无味，令人厌烦](https://notes.andymatuschak.org/z4hNAfe6TrqjxCydF3CaAVn1svaqiu86JFVBz)
+    - [如果没有源源不断的新卡片，间隔重复的复习环节往往会变得枯燥无味，令人厌烦](https://notes.andymatuschak.org/z4hNAfe6TrqjxCydF3CaAVn1svaqiu86JFVBz)
     - [The dominant culture around spaced repetition memory systems is fixated on meaningless goals](https://notes.andymatuschak.org/z7i9vs1MyadFaSkGBSwLVsfsQ5UEdN5aS2v9J)
-    - [围绕着间隔性重复记忆系统的主流文化是固定在无意义的目标上](https://notes.andymatuschak.org/z7i9vs1MyadFaSkGBSwLVsfsQ5UEdN5aS2v9J)
+    - [围绕着间隔重复记忆系统的主流文化专注于无意义的目标](https://notes.andymatuschak.org/z7i9vs1MyadFaSkGBSwLVsfsQ5UEdN5aS2v9J)
 - Responses to common objections
 - 对常见反对意见的回应
   - SRS are only relevant for rote learning of facts: “school learning”
   - SRS 只与事实的死记硬背有关：「学校学习」
     - [People underrate the importance of memory because of bad experiences with rote memorization in school](https://notes.andymatuschak.org/z5d7PMFhoTTpJfGAXms4H9gSBvUDRHb43pkfn)
-    - [人们低估了记忆的重要性，因为在学校里死记硬背的经验很糟糕](https://notes.andymatuschak.org/z5d7PMFhoTTpJfGAXms4H9gSBvUDRHb43pkfn)
+    - [人们低估了记忆的重要性，因为在学校里死记硬背的经历很糟糕](https://notes.andymatuschak.org/z5d7PMFhoTTpJfGAXms4H9gSBvUDRHb43pkfn)
     - Existing SRS are almost exclusively used for simple declarative knowledge, contra [Spaced repetition memory systems can be used to develop conceptual understanding](https://notes.andymatuschak.org/z6UZP7P4sRNgRKSvNj7tMV5uW6dDhwwbdZCy9)
-    - 现有的SRS几乎只用于简单的陈述性知识，相反[间隔重复记忆系统可用于发展概念性理解](https://notes.andymatuschak.org/z6UZP7P4sRNgRKSvNj7tMV5uW6dDhwwbdZCy9)
+    - 现有的 SRS 几乎只用于简单的陈述性知识，相反《[间隔重复记忆系统可用于加深概念理解](https://notes.andymatuschak.org/z6UZP7P4sRNgRKSvNj7tMV5uW6dDhwwbdZCy9)》
     - [Spaced repetition memory systems help you focus on deeper engagement by automating away rote memorization](https://notes.andymatuschak.org/z3hyucvGpCUB361PCegiHbX7FyFHcqZZF2pKK)
-    - [间隔性重复记忆系统通过自动消除死记硬背，帮助你专注于更深入的参与](https://notes.andymatuschak.org/z3hyucvGpCUB361PCegiHbX7FyFHcqZZF2pKK)
+    - [间隔重复记忆系统通过自动化死记硬背，帮助你专注于更深刻的投入](https://notes.andymatuschak.org/z3hyucvGpCUB361PCegiHbX7FyFHcqZZF2pKK)
     - [Spaced repetition memory systems can accelerate the unpleasant early stages of learning a subject](https://notes.andymatuschak.org/z36hoKonZMF93rY34goQhyFLfnTfHmSwBzNYs)
-    - [间隔性重复记忆系统可以加速学习一个科目的不愉快的早期阶段](https://notes.andymatuschak.org/z36hoKonZMF93rY34goQhyFLfnTfHmSwBzNYs)
+    - [间隔重复记忆系统可以加速一个科目不愉快的早期学习阶段](https://notes.andymatuschak.org/z36hoKonZMF93rY34goQhyFLfnTfHmSwBzNYs)
     - (caveat: it’s hard to write prompts for conceptual understanding!)
-    - （注意：要写出对概念理解的卡片是很难的！）
+    - （注意：要写出用于概念理解的卡片是很难的！）
   - SRS are only for material you don’t care about enough to remember “naturally.” Better to “learn by doing.”
-  - SRS只适用于你不够关心的材料，不能 "自然 "记住。最好是 "在实践中学习"。
+  - SRS 只适用于你不够关心的材料，不能「自然」记住。最好是「在实践中学习」。
   - External memory aids are sufficient
   - 外部记忆辅助工具已经足够了
   - Mnemonic techniques obviate SRS
-  - 记忆技术避免了SRS的出现
+  - 记忆技术避免了 SRS 的出现
   - Knowledge learned through SRS doesn’t transfer
-  - 通过SRS学到的知识不会转移
+  - 通过 SRS 学到的知识不能迁移
   - The real value in SRS comes from making one’s own prompts
-  - SRS的真正价值来自于制作自己的卡片
+  - SRS 的真正价值来自于制作自己的卡片
     - Maybe! [How important is it to write your own spaced repetition memory prompts?](https://notes.andymatuschak.org/z5TxQNCUTSAiTg42v7Ft6xASpnyiuvm6phAoJ)
-    - 也许吧！[编写自己的间隔性重复记忆卡片有多重要？](https://notes.andymatuschak.org/z5TxQNCUTSAiTg42v7Ft6xASpnyiuvm6phAoJ)
+    - 也许吧！《[亲自写间隔重复记忆卡片有多重要？](https://notes.andymatuschak.org/z5TxQNCUTSAiTg42v7Ft6xASpnyiuvm6phAoJ)》
 
 ------
 
