翻译 避免使用「对或错」间隔重复记忆卡片

--- a/ToolsForThought/在非技术性的助记文本中，填空卡经常引起挫败感.md
+++ b/ToolsForThought/在非技术性的助记文本中，填空卡经常引起挫败感.md
@@ -4,7 +4,7 @@
 
 在[如何写出好卡片](https://andymatuschak.org/prompts/)的反馈中，填空卡的问题是一个普遍话题。我感觉人们发现自己经常忘记这些填空卡的答案，而相对于问答卡，感觉不那么合理。这超出了自编填空卡的问题（[在间隔重复记忆系统中，填空卡似乎比问答卡产生更少的理解](https://notes.andymatuschak.org/zX7yi8v7qy3n1RfQDkFZFeyTCZPX3BVqy8sC)）：它们专门用于在[助记媒介](https://notes.andymatuschak.org/z4rRX3qwSSJRsEkdXKwH2shamgHNeRthrMLiF)中编写卡片。
 
-许多人觉得他们忘记的是我（作者）的措辞，而不是一些很确定的外源知识（[记忆媒介的读者有时会因作者的措辞选择而感到障碍重重](https://notes.andymatuschak.org/zMFKJdtNGpucVUcitRVJiMxfyoNY4A4c2Bd)）。某种程度上是没错。填空卡可能要求读者在更大程度上额外记住问题所要求的内容。关于这个问题，更多讨论参见[间隔重复记忆卡片应该明确地产生一个具体的答案](https://notes.andymatuschak.org/z7wgJPD7gEoPwiBxuPNS8osvxczccM8Cq2j7F)。这意味着填空卡通常不符合《[在 Issa Rice 之后，专家回答启发法](https://notes.andymatuschak.org/zEfpMY7F12gQ6NcbycHCNdpXqxb2mxdkJiX)》。
+许多人觉得他们忘记的是我（作者）的措辞，而不是一些很确定的外源知识（[记忆媒介的读者有时会因作者的措辞选择而感到障碍重重](https://notes.andymatuschak.org/zMFKJdtNGpucVUcitRVJiMxfyoNY4A4c2Bd)）。某种程度上是没错。填空卡可能要求读者在更大程度上额外记住问题所要求的内容。关于这个问题，更多讨论参见《[间隔重复记忆卡片应该明确地产生一个具体的答案](https://notes.andymatuschak.org/z7wgJPD7gEoPwiBxuPNS8osvxczccM8Cq2j7F)》。这意味着填空卡通常不符合《[在 Issa Rice 之后，专家回答启发法](https://notes.andymatuschak.org/zEfpMY7F12gQ6NcbycHCNdpXqxb2mxdkJiX)》。
 
 Soren Bjornstad:
 
