--- a/ToolsForThought/间隔重复系统可用于对注意力进行编程.md
+++ b/ToolsForThought/间隔重复系统可用于对注意力进行编程.md
@@ -4,19 +4,19 @@
 
 [Spaced repetition memory systems make memory a choice](https://notes.andymatuschak.org/z4bR1HVvDUhMXDm5SJB4Tiw4xGbrm9AfXWgbc), but the computerized component’s value lies specifically in dynamically scheduling and selecting questions to be reviewed. In some sense, the efficacy of a [Spaced repetition memory system](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC) comes from its power to *program your attention* ([Programmable attention](https://notes.andymatuschak.org/zJrfPCbY7GcpV9asEc8NTVzXTAV4TvRFMuY6)). Think: “{cron} for your mind.”
 
-[间隔重复记忆系统使记忆成为一种选择](https://notes.andymatuschak.org/z4bR1HVvDUhMXDm5SJB4Tiw4xGbrm9AfXWgbc)，但计算机部分的价值特别在于动态地安排和选择要复习的问题。从某种意义上说，[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)的功效来自于它**对你的注意力的编程**能力（[可编程的注意力](https://notes.andymatuschak.org/zJrfPCbY7GcpV9asEc8NTVzXTAV4TvRFMuY6)）。想想看：「{cron}为你的头脑」。
+[间隔重复记忆系统使记忆成为一种选择](https://notes.andymatuschak.org/z4bR1HVvDUhMXDm5SJB4Tiw4xGbrm9AfXWgbc)，但计算机部分的价值特别在于动态地安排和选择要复习的问题。从某种意义上说，[间隔重复记忆系统](https://notes.andymatuschak.org/z4eXdSMJFv2qVGXSUEKH4vdcHBrLHcFY1ZGfC)的功效来自于它**对你注意力的编程**能力（[可编程的注意力](https://notes.andymatuschak.org/zJrfPCbY7GcpV9asEc8NTVzXTAV4TvRFMuY6)）。想想看：「为你的头脑{计划任务}」。
 
 Manually making decisions about which cards to review would be far too taxing on a per-card basis. The transaction cost is too high. When that work is mostly outsourced, you can make a coarser decision—to devote your attention to SRS practice for 10 minutes—and then let your attention be directed by the machine within that block.
 
-人工决定复习哪些卡片，对每张卡片来说都太累了。交易成本太高。当这项工作大部分被外包时，你可以做一个更粗略的决定——把你的注意力放在 SRS 练习上10分钟，然后让你的注意力在这个区块内被机器引导。
+对每张卡片来说，人工决定复习哪些卡片实在是太费力了。交易成本太高。当这项工作基本上被外包出去时，你可以做一个更粗略的决定——把你的注意力放在 SRS 练习上 10 分钟——然后让你的注意力在这个时间块内被机器引导。
 
 Within a traditional flashcard-style system, you can use this observation to go far beyond memorization: see [Spaced repetition memory systems can be used to prompt application, synthesis, and creation](https://notes.andymatuschak.org/zE8PK4UUAAWK6LEcmr8jja8JdxpUxcf1FUCX) and [Spaced repetition may be a helpful tool to develop or change habits](https://notes.andymatuschak.org/z249N76MhdBzDfrwMnqP6jEsTv6Z8u2kJrp8). [Spaced repetition prompt design is about designing tasks for your future self](https://notes.andymatuschak.org/z4TCpuykanZCZYtC5xCccfuiTMZQzdeRv5BuW).
 
-在传统的闪存卡式系统中，你可以利用这一观察，远远超出记忆的范围：见[间隔重复记忆系统可用于提示应用、综合和创造](https://notes.andymatuschak.org/zE8PK4UUAAWK6LEcmr8jja8JdxpUxcf1FUCX)和[间隔重复可能是培养或改变习惯的有用工具](https://notes.andymatuschak.org/z249N76MhdBzDfrwMnqP6jEsTv6Z8u2kJrp8)。[间隔重复的提示设计是为未来的自己设计任务](https://notes.andymatuschak.org/z4TCpuykanZCZYtC5xCccfuiTMZQzdeRv5BuW)。
+在传统的抽认卡式系统中，你可以利用这一观察，远远超出记忆的范围：见《[间隔重复记忆系统可用于提示应用、综合和创造](https://notes.andymatuschak.org/zE8PK4UUAAWK6LEcmr8jja8JdxpUxcf1FUCX)》和《[间隔重复可能是培养或改变习惯的有用工具](https://notes.andymatuschak.org/z249N76MhdBzDfrwMnqP6jEsTv6Z8u2kJrp8)》、《[间隔重复的提示设计是为未来的自己设计任务](https://notes.andymatuschak.org/z4TCpuykanZCZYtC5xCccfuiTMZQzdeRv5BuW)》
 
 But the core *concept*—automatically arranging and presenting tasks according to some expanding schedule—can be instantiated in many interfaces and domains. I call this notion [Spaced everything](https://notes.andymatuschak.org/z59aJSjgqr4B1k1ofoE7ZBF2dv8MeJ1Drf4TQ).
 
-但是，核心的*概念*——根据一些扩展的时间表自动安排和呈现任务——可以在许多界面和领域中被实例化。我把这个概念称为[间隔一切](https://notes.andymatuschak.org/z59aJSjgqr4B1k1ofoE7ZBF2dv8MeJ1Drf4TQ)。
+但是，核心的**概念**——根据一些扩展的安排表自动安排和呈现任务——可以在许多界面和领域中被实例化。我把这个概念称为[间隔一切](https://notes.andymatuschak.org/z59aJSjgqr4B1k1ofoE7ZBF2dv8MeJ1Drf4TQ)。
 
 Some examples:
 
@@ -30,8 +30,8 @@ Some examples:
 
 - [渐进阅读](https://notes.andymatuschak.org/z2gZooHVxB8x6EbDSR97Bz1jFMqAqSWSLPnMs)
 - [穿越时间的文本](https://notes.andymatuschak.org/z73hGbYFm7bjV3yYwK29MvbBZEcwK6kWyduqV)
-- [间隔性重复可能是一个有用的工具，可以逐渐发展出灵感](https://notes.andymatuschak.org/z7iCjRziX6V6unNWL81yc2dJicpRw2Cpp9MfQ)
-- [间隔重复可以降低破坏性的收件箱维护操作的风险](https://notes.andymatuschak.org/z7yRMBXGc81KkUwLxefodzfnnfKXx63vXzP88) (待办事项列表、电子邮件、阅读列表等)
+- [间隔重复可能是一个有用的工具，可以逐渐发展出灵感](https://notes.andymatuschak.org/z7iCjRziX6V6unNWL81yc2dJicpRw2Cpp9MfQ)
+- [间隔重复可以降低破坏性的收件箱维护操作的风险](https://notes.andymatuschak.org/z7yRMBXGc81KkUwLxefodzfnnfKXx63vXzP88)（待办事项列表、电子邮件、阅读列表等）
 - [Readwise](https://notes.andymatuschak.org/z2ewMN8Hzd8gt4qyfQV1ognJ5PQs3CXxDfCJ)
 
 Related:
@@ -42,9 +42,9 @@ Related:
 
 相关的：
 
-- 关于可以使用简单的SRS闪存卡格式的应用，见《[间隔重复记忆系统的不寻常应用](https://notes.andymatuschak.org/zrs5GnK6DEm1NcajMfqJ1n93PZwSHCEP9Drt)》
-- [作为慕课的间隔重复系统](https://notes.andymatuschak.org/z39D31syJUE1gtNTREogSZiG6LDSuwygN5NDt)
-- [操作系统级间隔重复系统](https://notes.andymatuschak.org/z36iMKLe4CDAXdtLSJD4Z6qPPFUS8ZXymUk3i)
+- 关于可以使用简单的 SRS 抽认卡格式的应用，见《[间隔重复记忆系统的不寻常应用](https://notes.andymatuschak.org/zrs5GnK6DEm1NcajMfqJ1n93PZwSHCEP9Drt)》
+- [作为问答教学法的间隔重复系统](https://notes.andymatuschak.org/z39D31syJUE1gtNTREogSZiG6LDSuwygN5NDt)
+- [操作系统层的间隔重复系统](https://notes.andymatuschak.org/z36iMKLe4CDAXdtLSJD4Z6qPPFUS8ZXymUk3i)
 
 ------
 
